--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,7 +13,7 @@ $dark-turq: #269D9B;
 $darker-turq: #1E7171;
 @mixin main-section {
     width: 100vw;
-    min-height: 100vh;
+    height: 100vh;
     font-family: 'Spartan MB', sans-serif;
     overflow: hidden;
     position: relative;
@@ -30,21 +30,12 @@ html,
 body {
     margin: 0;
     padding: 0;
-    overflow: hidden !important;
-}
-
-.App {
-    height: 100vh;
-    width: 100vw;
-    overflow-y: scroll;
     overflow-x: hidden;
-    scroll-snap-type: y mandatory;
-    display: flex;
-    flex-direction: column;
 }
 
 a {
     text-decoration: none;
+    cursor: pointer;
     &:visited {
         color: $darker-turq;
     }
@@ -78,12 +69,138 @@ a {
             color: $dark-turq;
         }
     }
+    //the wrapper of menubutton
+    .nav-select {
+        @include center-parents();
+        //naving button menu
+        button {
+            border: none;
+            background-color: transparent;
+            padding: 0;
+            outline: none;
+            top: 0;
+        }
+    }
+    .stick-figure {
+        width: 2rem;
+        position: relative;
+        z-index: 3000;
+        height: 1.5rem;
+        margin: auto;
+        cursor: pointer;
+        .stick {
+            position: absolute;
+            margin: auto;
+            top: 0;
+            bottom: 0;
+            width: 2rem;
+            background-color: $dark-turq;
+            height: 0.15rem;
+            transition: all 300ms cubic-bezier(0.165, 0.84, 0.44, 1);
+        }
+        .top {
+            transform: translateY(0.4rem);
+        }
+        .bottom {
+            transform: translateY(-0.4rem);
+        }
+        .open.top {
+            transform: rotate(45deg);
+        }
+        .open.bottom {
+            transform: rotate(-45deg);
+        }
+        .open.mid {
+            transform: translateX(-2rem) scale(0, 0);
+        }
+    }
+    .menu {
+        @include center-parents();
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        background: $turquoise;
+        transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+        nav {
+            display: flex;
+            flex-direction: column;
+            a {
+                font-weight: 600;
+                color: $darker-turq;
+                font-size: $big-heading;
+                margin: 0.3rem 0;
+            }
+        }
+    }
+}
+
+.bulb-holder {
+    height: 23vh;
+    width: 50vw;
+    top: 0;
+    position: fixed;
+    z-index: 2000;
+    .bulb-about {
+        opacity: 0;
+        width: 6rem;
+        height: 6rem;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        transform: translateX(50%);
+        transform-origin: center center;
+        g {
+            transform: translateX(1rem) rotate(13deg);
+        }
+    }
+    .wire {
+        height: 1px;
+        width: 0;
+        background: $dark-turq;
+        position: absolute;
+        bottom: 0.14rem;
+        .pulse {
+            width: 3vw;
+            height: 1px;
+            background: $yellow;
+            position: absolute;
+            right: 0;
+        }
+    }
+}
+
+.robot-courses {
+    width: 7rem;
+    height: 7rem;
+    position: fixed;
+    z-index: 2002;
+    left: 50vw;
+    transform: translate(-50%, 0);
+    svg {
+        position: absolute;
+        left: -0.18rem;
+        width: 100%;
+        height: 100%;
+    }
+    .smokes {
+        position: absolute;
+        width: 1.5rem;
+        height: 1.5rem;
+        bottom: -0.3rem;
+    }
+    .right-smoke {
+        right: 0;
+    }
+    .left-smoke {
+        transform: rotate(180deg);
+    }
 }
 
 .section {
     @include main-section();
-    scroll-snap-align: center;
-    scroll-snap-stop: always;
+    // scroll-snap-align: center;
+    // scroll-snap-stop: always;
     background-color: $bg;
     display: flex;
     color: $black;
@@ -95,6 +212,7 @@ a {
     flex: 1;
     text-align: left;
     overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 .section-left {
@@ -119,15 +237,17 @@ a {
     position: absolute;
     background: $bg;
     width: 70%;
-    height: 15%;
+    height: 40%;
     justify-content: end;
-    bottom: 25%;
+    bottom: 0%;
     .explore-button {
         border: none;
         border-radius: 0;
         background: linear-gradient(to right, $turquoise 49%, $dark-turq 50%, $dark-turq 100%);
         background-size: 200% 100%;
         background-position: right;
+        position: absolute;
+        top: 0;
         color: $light-turq;
         padding: 0.7rem 1.9rem;
         a {
@@ -157,53 +277,21 @@ a {
 #About {
     .section-left {
         flex-direction: column;
-        overflow-x: hidden;
-        .bulb-holder {
-            height: 20vh;
-            width: 50vw;
-            top: 0;
-            position: fixed;
-            z-index: 2000;
-            background-color: $bg;
-        }
-        svg.bulb-about {
-            width: 6rem;
-            height: 6rem;
-            position: absolute;
-            right: 0;
-            bottom: 0;
-            transform: translateX(50%);
-            transform-origin: center center;
-            g {
-                transform: translateX(1rem) rotate(13deg);
-            }
-        }
-        .wire {
-            height: 1px;
-            width: 100%;
-            background: $dark-turq;
-            position: absolute;
-            bottom: 0.14rem;
-            .pulse {
-                width: 3vw;
-                height: 1px;
-                background: $yellow;
-                position: absolute;
-                right: 0;
-            }
-        }
-    }
-    .section-right {
         .about-titles {
             width: 70%;
             .title-child {
                 margin: 3rem 0;
-                color: $light-turq;
+                color: $black;
                 p {
                     margin: 0;
                     font-size: $normal-text;
                 }
             }
+        }
+        .button-wrapper {
+            position: relative;
+            background: transparent;
+            height: auto;
         }
     }
 }
@@ -240,9 +328,6 @@ a {
 }
 
 #Courses {
-    .section-right {
-        flex-grow: 0;
-    }
     .courses-panel {
         @include center-parents();
         position: relative;
@@ -260,7 +345,6 @@ a {
             width: 100%;
             height: 100%;
             background: $light-turq;
-            border-radius: 10px;
             overflow: hidden;
             .course-img {
                 @include center-parents();
@@ -269,7 +353,6 @@ a {
                 width: 100%;
                 height: 60%;
                 top: 0;
-                opacity: 0.8;
                 img {
                     object-fit: cover;
                     width: 250%;
@@ -299,6 +382,45 @@ a {
     }
 }
 
+#Contacts {
+    .section-left {
+        p {
+            font-size: $normal-text;
+            a {
+                font-weight: 600;
+                color: $dark-turq;
+            }
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+            input,
+            textarea {
+                border: none;
+                outline: none;
+                border-radius: 0;
+                margin: 0.5rem 0;
+                padding: 0.5rem;
+                color: $darker-turq;
+                font-family: "Spartan MB", sans-serif;
+                background: transparent;
+                transition: all 0.8s cubic-bezier(0.075, 0.82, 0.165, 1);
+                &::placeholder {
+                    color: $turquoise;
+                }
+                border-bottom: $turquoise 2px solid;
+                &:focus {
+                    outline: none;
+                    border-bottom: $dark-turq 2px solid;
+                }
+            }
+        }
+        .button-wrapper {
+            height: 30%;
+        }
+    }
+}
+
 @media (max-width:1000px) {
     .courses-panel {
         grid-template-columns: 50% 50% !important;
@@ -307,11 +429,49 @@ a {
 }
 
 @media (max-width: 800px) {
+    .nav {
+        width: 100%;
+        top: 0;
+        .nav-wrapper {
+            width: 80%;
+        }
+    }
     .section {
         flex-direction: column;
     }
-    .courses-panel {
-        grid-template-columns: 100% !important;
-        grid-template-rows: 25% 25% 25% 25%;
+    .titles {
+        width: 80% !important;
+    }
+    .button-wrapper {
+        width: 80%;
+    }
+    #About {
+        .section-right {
+            flex-grow: 0.7;
+            .about-titles {
+                .title-child {
+                    margin: 1rem 0;
+                    h1 {
+                        margin: 0.5rem 0;
+                    }
+                }
+            }
+        }
+    }
+    #Courses {
+        .courses-panel {
+            height: 65%;
+            grid-template-columns: 100% !important;
+            grid-template-rows: 25% 25% 25% 25%;
+            .course {
+                .course-img {
+                    height: 100%;
+                }
+                .course-des {
+                    height: 80%;
+                    background: rgba(235, 249, 250, 0.8);
+                }
+            }
+        }
     }
 }
